src/components/App.css
html, body {
    padding:0;
    margin:0;
}

body {
    font-family: 'Helvetica Neue';
    font-family: 'Nunito Sans', sans-serif;
    /*font-family: 'Roboto', sans-serif;
    font-family: 'Space Mono', sans-serif;*/
    /*300, 400, 500, 700*/
    font-weight: 400;
    font-size: 20px;
    color: #000;
    background: coral;
    /*background: lightseagreen*/
    text-align: center;
}


h1, h2, h3, h4, h5 {
    color: #000;
    font-weight: 500;
    margin: 0 0 10px 0;
    padding:0;
}


h1 {
    margin: 0;
    padding:0;
    font-weight: 700;
    font-size: 60px;
    line-height: 1.0em;
    color: rgba(0,0,0, 0.7);
    color: #000;
    

}


p {
    margin: 0 0 20px 0;
}

.text-left {
    text-align: left;   
}


.logo {
    font-size: 100px;
    font-weight: 700;
    display:none;
}


.category {
    padding: 0 0 60px 0;
    
}
.category__title {
    font-size: 50px;
    font-weight: 700;
    margin: 0;
}
.category__copy {

}

.question {
    margin: 0 0 30px 0;
    text-align: left;
    position: relative;
}
.question__title {
    font-size: 30px;
    font-weight: 700;
    margin:0 0 5px 0;
}

.question__number {
    
    /*background: #e35e41;*/
    color: coral;
    /*background: #000;*/
    
    font-size: 20px;
    font-weight: 600;
    position: absolute;
    left:-60px;
    top:6px;
    color: rgba(0,0,0, 1);
    

}

.question__number:after {
    content: "";
    position:absolute;
    right: -25px;
    top: 50%;
    
    width: 15px;
    height: 1px;
    background: #000;
}



.question__copy {

}

.question hr {
    margin-left: 0;
    margin-right: 0;

}

.answers {
    list-style:none;
    padding:0;
    margin:0 0 70px 0;
    font-size: 14px;
    text-align: left;
}

.answer__item  {
    position: relative;
}

.answer__item input{
    position: absolute;
    top:0;
    left:0;
    opacity:0;
}


.answer__item label {
    position: relative;
    margin: 0 0 -2px 0;
    display: block;
    font-size: 25px;
    font-weight: 600;
    /*color: #fff;*/
    padding: 10px 20px 10px 50px;
    text-decoration: none;
    border: 2px solid rgba(255,255,255, 0.5);
    transition: all ease 0.3s;
    cursor: pointer;
}

.answer__item label:hover {
    border-color: #fff;
}

.answer__item label:after {
    
    content: "";
    position: absolute;
    top: 18px;
    left:18px;
    z-index: 1;

    width: 12px;
    height: 12px;
    border:2px solid #fff;
    border-radius: 50%;

}


.answer__item input:checked + label{
    background: #fff;
    /*border-color: #000;*/

}

.answer__item input:checked + label:after{
    border-color: #000
}

.answer__value {
    position: absolute;
    right:20px;
    top:18px;
    font-size: 18px;
    font-weight: 700;
    text-align: right;
    opacity: 0.5

}


hr{
    width: 75px;
    height: 0px;
    border: 0;
    border-bottom: 5px solid #000;
    text-align: center;
    margin: 0 auto
}



.loading {
    
    position: fixed;
    top: 50%;
    left: 50%;
    background: #000;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    margin: -5px 0 0 -5px;
    text-indent: -6000px;

    animation-iteration-count: infinite;
    animation-duration: .5s;
    animation-fill-mode: both;
    animation-name: wobble;
}



@keyframes wobble {

    from {
        transform: none;
    }

    50% {
        transform: translateY(-50px) ;
    }

    to {  
        transform: none;
    }

}



.progress {
    
    position: absolute;
    top: -5px;
    left: 0%;
    right: 0;
    /*background: rgba(0, 0, 0, 0.1);*/
    height: 5px;
    margin: 0 auto;
    /*box-shadow: inset 0 1px 1px rgba(0,0,0,0.1)*/
}

.progress__bar {
    width: 0;
    height: 5px;
    background: black;
    transition: all ease 0.3s;
    content: "";
    /*border-radius: 2px;*/
}

.progress__label {
    position: absolute;
    top:-30px;
    left:0;
    font-size: 15px;
    height: 30px;
    line-height: 30px;
    background: #000;
    color: #fff;
    padding: 0 10px;    
    transition: all ease 0.3s; 
    transform: translateX(-100%);

    display:none;
    
}


.scores {
    margin: 0 0 50px 0;
}

.scores__summary {
    
    /*font-weight: 600;*/
    font-size: 18px; 
    max-width: 300px;
    margin-left: auto;
    margin-right: auto
}


.dial {
    display: inline-block;
    width: 180px;
    margin: 0 auto 10px auto;
    padding: 0 10px;
}

.dial__title {
    font-size: 30px;
    font-weight: 500;
}

.dial text {
    text-anchor: middle;
    font-weight: 600;
    font-size: 25px;
    fill: #000;  
}

.dial text.summary {
    opacity: 0.4
}

.dial text.percent {
    text-anchor: middle;
    font-weight: 500;
    font-size: 70px;
    
}

.dial path.total {
    fill:black;
    /*fill:#ac3b22;*/
    fill: blueviolet;
}

.dial path.possible {
    fill: #e35e41;
    stroke: #e35e41;
}


.app {
    max-width: 900px;
    margin: 0 auto;
    padding: 0 20px 100px 20px;
}

header {
    
    padding: 50px 0;
    text-align: center;
       
}

header p{
    
}



footer {
    position: fixed;
    bottom:0;
    left: 0;
    right:0;
    z-index: 11;    
    background: coral;
    padding: 0 0;

    /*box-shadow: 0 0 60px rgba(0, 0, 0, 0.2);*/
    

}

.container {
    padding: 150px 0;
    width: 1000px;
    margin: 0 auto;
}


.btn {
    display: inline-block;
    font-size: 25px;
    font-weight: 700;
    color: #fff;
    padding: 10px 20px;
    text-decoration: none;
    border: 2px solid rgba(255,255,255, 0.5);

    transition: all ease 0.3s;
}

.btn--naked {
    border-color: transparent;
}


.btn:hover {
    border-color: #fff;    
}


.btn--submit {
    
    /*padding: 20px 20px;*/
    border:0;
    background: #fff;
    color: #000;
    
}

.btn--submit:hover {
    padding-top: 20px;
    padding-bottom: 20px;
}



.btn--block {
    text-align: center;
    width: 100%;
    box-sizing: border-box;
    display:block;

}



.row {

}

.col-6 {
    float:left;
    width: 50%;
}




.mb20 {
    margin-bottom: 20px;
}


.tooltip {
    position: relative;
    text-decoration: none;
    display:inline-block;
    font-weight: 700;
    font-size: 0.8em;
    cursor: pointer;
    color: purple;
    /*background: #fff;*/
    /*margin: 0 5px;*/
}

.tooltip hr {
    margin: 0 auto 15px auto;
    display:none;
}

.tooltip__title {
    font-weight: 600;
    margin: 0 0 5px 0;
}

.tooltip__text {
    display:block;
    position: absolute;
    left: 50%;
    bottom: calc(100% + 8px);
    width: 200px;
    padding: 12px 10px;
    transform: translateX(-50%);
    text-align: left;
    
    background: #fff;
    font-size: 16px;
    font-weight: 400;
    color: #333;
    
    /*border-radius: 5px;*/
    /*box-shadow: 0 0 20px rgba(0,0,0, 0.2)*/

    
} 

.tooltip__text:after {
	top: 100%;
	left: 50%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
	border-color: rgba(255, 255, 255, 0);
	border-top-color: #fff;
	border-width: 6px;
	margin-left: -6px;
}






/* page */

.page-appear {
  opacity: 0.01;
}

.page-appear.page-appear-active {
  opacity: 1;
  transition: all .3s ease-in;
}

.page-enter {
  opacity: 0.01;
  transition: all .3s ease-in;
}

.page-enter.page-enter-active {
  opacity: 1;
}

.page-leave {
  opacity: 1;
  transition: all .5s ease-in;
  display:none;
}

.page-leave.page-leave-active {
  opacity: 0;
}


/* tooltip */

.tooltip-enter {
  opacity: 0.01;
  transition: all .2s ease-in;
  
  bottom: calc(100% + 20px);
}

.tooltip-enter.tooltip-enter-active {
  opacity: 1;
  margin-top: 0;
  bottom: calc(100% + 8px);
}

.tooltip-leave {
  opacity: 1;
  transition: all .2s ease-in;
  bottom: calc(100% + 8px);
}

.tooltip-leave.tooltip-leave-active {
  opacity: 0;
  bottom: calc(100% + 20px);
  
}


/* fade animation */

.fade-appear {
  opacity: 0.01;
}

.fade-appear.fade-appear-active {
  opacity: 1;
  transition: opacity .3s ease-in;
}

.fade-enter {
  opacity: 0.01;
  transition: all .3s ease-in;
}

.fade-enter.fade-enter-active {
  opacity: 1;
}

.fade-leave {
  opacity: 1;
  transition: all .3s ease-in;
}

.fade-leave.fade-leave-active {
  opacity: 0;
}


/* modal animation */

.modal {
    position:fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom:0;
    box-sizing: border-box;
    padding: 30px;
    background: #fff;
    text-align:left;
    /*transform: translate(-50%, -50%);*/
    z-index: 20;
    overflow: hidden;
}

.modal hr {
    margin: 0 0 20px 0;
}

.modal-enter {
  transition: all .3s ease-in;
  opacity: 0.01;
}

.modal-enter.modal-enter-active {
  opacity: 1;
}

.modal-leave {
  transition: all .3s ease-in;
  opacity: 1;
}

.modal-leave.modal-leave-active {
  opacity: 0.01;
}



.clearfix:after {
	visibility: hidden;
	display: block;
	font-size: 0;
	content: " ";
	clear: both;
	height: 0;
	}
* html .clearfix             { zoom: 1; } /* IE6 */
*:first-child+html .clearfix { zoom: 1; } /* IE7 */





@media (max-width: 1100px) {

    .question {
        padding-top: 40px;
    }
    
    .question__number {
        left:0;
        top: 0;
    }

}

@media (max-width: 800px) {
  .dial {
    width: auto;
  }

}

